package structural.decorator.beverage.B2_tokenize;

import java.util.ArrayList;
import java.util.List;

public interface Tokenize {
    List<String> tokenize();
}
